small changes to delete comment icon and paddings

--- a/views/post.ejs
+++ b/views/post.ejs
@@ -34,7 +34,7 @@
             </button>
           </form>
           <%}%>
-          <div class="col-6 text-center">
+          <div class="text-center">
             <span><%= post.likes %> likes</span>
           </div>
           <% if(post.user._id.toString() == loggedUser._id.toString() && !post.catagory ){ %>
