small changes to delete comment icon and paddings

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,7 +105,7 @@ a:hover{
   
   .trophy-icon {
     display: inline-block;
-    color: #ffd700; /* Gold color */
+    color: #c6ad1f!important; /* Gold color */
     font-size: 20px;
   }
   
