--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,6 +24,8 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/style.css" />
+    <link href="https://vjs.zencdn.net/7.14.3/video-js.css" rel="stylesheet" />
+    <script src="https://vjs.zencdn.net/7.14.3/video.js"></script>
   </head>
   <body class="test">
     <header class="container fixed-header">
