--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -22,7 +22,17 @@
         <% } else if (mergedArray[i].media.type == "video") { %>
           
         <a href="/post/<%= mergedArray[i]._id %>" class="post">
-          <video id="my-video" class="video-js vjs-default-skin vjs-big-play-centered img-fluid post-video lazy" preload="auto" width="100%" height="auto" poster="<%= mergedArray[i].media.thumbNail %>" data-setup='{"fluid": true, "playbackRates": [0.5, 1, 1.5, 2], "controls": true, "autoplay": true, "loop": true, "muted": true, "controlBar": {"playToggle": {}, "currentTimeDisplay": {}, "timeDivider": {}, "durationDisplay": {}, "volumePanel": {"inline": false, "vertical": true}, "progressControl": {"keepTooltipsInside": true}}}'>
+          <video 
+          id="my-video"
+          class="video-js vjs-big-play-centered img-fluid post-video"
+          autoplay
+          loop
+          muted
+          controls
+          preload="auto"
+          poster="<%= mergedArray[i].media.thumbnailUrl %>"
+          data-setup='{"fluid": true, "userActions": {"doubleClick": false}, "controlBar": { "fullscreenToggle": false, "pictureInPictureToggle": false }}'
+        >
             <source src="<%= mergedArray[i].media.url %>" type="video/mp4">
             <p class="vjs-no-js">
               To view this video please enable JavaScript, and consider upgrading to a web browser that
