--- a/views/post.ejs
+++ b/views/post.ejs
@@ -15,7 +15,8 @@
           preload="auto"
           poster="<%= post.media.thumbnailUrl %>"
           data-setup='{"fluid": true, "userActions": {"doubleClick": false}, "controlBar": { "fullscreenToggle": false, "pictureInPictureToggle": false }}'
-        >
+          playsinline
+          >
           <source src="<%= post.media.url %>" type="video/mp4">
           <p class="vjs-no-js">
             To view this video please enable JavaScript, and consider upgrading to a web browser that
