--- a/public/css/style.css
+++ b/public/css/style.css
@@ -190,7 +190,6 @@ a:hover{
   .post-thumbnail img {
     width: 100%;
     height: 100%;
-    object-fit:contain!important;
   }
   .post-thumbnail video {
     width: 100%;
@@ -207,7 +206,7 @@ a:hover{
   
   .post-img {
     object-fit: cover;
-    height: 100%;
+    max-height: 85vh;
     width: 100%;
   }
 
