--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,17 +5,31 @@
     
        
     <div class="profile-info">
-      
+      <div>
       <h2> <%= user.userName.toLowerCase() %></h2>
+      
+      <p>Followers: <%= user.followers.length %></p>
+      <p>Following: <%= user.following.length %></p>
+      </div>
       <div class="">
         <img class="rounded-circle mr-3 mb-2" src="/imgs/Default-Profile-Picture-Transparent-Images.png" alt="Profile picture" width="100" height="100">
- 
+        
   <% if(user._id.toString() == loggedUser._id.toString()){ %>
       <a href="/logout" class="col-3 btn btn-primary">Logout</a>
     <% } else {%>
-      <a href="#" class="col-3 btn btn-primary">Add Friend</a>
+      <% if (loggedUser && loggedUser._id.toString() !== user._id.toString()) { %>
+        <% if (isFollowing) { %>
+          <form action="/users/<%= loggedUser._id %>/unfollow/<%= user._id %>?_method=DELETE" method="POST">
+            <button class="col-3 btn btn-primary" type="submit">Unfollow</button>
+          </form>
+        <% } else { %>
+          <form action="/users/<%= loggedUser._id %>/follow/<%= user._id %>" method="POST">
+            <button class="col-3 btn btn-primary" type="submit">Follow</button>
+          </form>
+        <% } %>
+      <% } %>
   <% } %>
-    
+
       </div>
   </div>
   
