--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -23,8 +23,10 @@
           
         <a href="/post/<%= mergedArray[i]._id %>" class="post">
           <video 
+          
           id="my-video"
           class="video-js vjs-big-play-centered img-fluid post-video"
+          disableRemotePlayback
           autoplay
           loop
           muted
