--- a/views/post.ejs
+++ b/views/post.ejs
@@ -10,6 +10,7 @@
           <video
           id="my-video"
           class="video-js vjs-big-play-centered img-fluid post-video"
+          disableRemotePlayback
           autoplay
           loop
           controls
