--- a/views/postmenu.ejs
+++ b/views/postmenu.ejs
@@ -23,12 +23,13 @@
         <form action="/pr/createPR" enctype="multipart/form-data" method="POST">
           <div class="mb-3">
 
-            <select class="form-control" id="catagory" name="catagory" required>
+            <select class="form-control" id="category" name="category" required>
               <option value="" disabled selected>Select PR</option>
               <option value="benchpress">Bench Press 1RM</option>
               <option value="deadlift">Dead Lift 1RM</option>
               <option value="squat">Squat 1RM</option>
             </select>
+            
 
             <label for="caption" class="form-label">Caption</label>
             <textarea class="form-control" id="caption" name="caption" required></textarea>
