--- a/views/leaderboard.ejs
+++ b/views/leaderboard.ejs
@@ -1,39 +1,47 @@
 <%- include('partials/header') -%>
 
-<h1>Leaderboard</h1>
-<form>
-  <label for="category-select">Select a category:</label>
-  <select id="category-select" name="category" onchange="this.form.submit()">
-    <option value="">All categories</option>
-    <% for (const category of ['benchpress', 'squat', 'deadlift']) { %>
-    <option value="<%= category %>" <%= category === selectedCategory ? 'selected' : '' %>>
-      <%= category.charAt(0).toUpperCase() + category.slice(1) %>
-    </option>
+<div class="container">
+  <div class="row justify-content-center mt-5">
+    <h1 class="col-12 mb-4 text-center">Leaderboard</h1>
+    <form class="col-12 mb-4">
+      <div class="form-group">
+        <label for="category-select">Select a category:</label>
+        <select class="form-control" id="category-select" name="category" onchange="this.form.submit()">
+          <option value="">All categories</option>
+          <% for (const category of ['benchpress', 'squat', 'deadlift']) { %>
+          <option value="<%= category %>" <%= category === selectedCategory ? 'selected' : '' %>>
+            <%= category.charAt(0).toUpperCase() + category.slice(1) %>
+          </option>
+          <% } %>
+        </select>
+      </div>
+    </form>
+    <% if (prs.length === 0) { %>
+    <h2 class="col-12 text-center">No PRs found for <%= selectedCategory %></h2>
+    <% } else { %>
+    <div class="col-12">
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>User</th>
+            <th>Category</th>
+            <th>Likes</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% for (const pr of prs) { %>
+          <tr>
+            <td><%= pr.user.userName %></td>
+            <td><%= pr.category %></td>
+            <td><%= pr.likes %></td>
+          </tr>
+          <% } %>
+        </tbody>
+      </table>
+    </div>
     <% } %>
-  </select>
-</form>
-<% if (prs.length === 0) { %>
-<h1>No PRs found for <%= selectedCategory %></h1>
-<% } else { %>
-<table>
-  <thead>
-    <tr>
-      <th>User</th>
-      <th>Category</th>
-      <th>Likes</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% for (const pr of prs) { %>
-    <tr>
-      <td><%= pr.user.userName %></td>
-      <td><%= pr.category %></td>
-      <td><%= pr.likes %></td>
-    </tr>
-    <% } %>
-  </tbody>
-</table>
-<% } %>
+  </div>
+</div>
 
 
 <%- include('partials/footer') -%>
