--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -10,7 +10,10 @@
             <div class="profile-button">
                 <a href="/profile/<%= loggedUser._id %>">  <i class="fas fa-user"></i></a>
             </div>
-
+            <div class="leaderboard-button">
+                <a href="/leaderboard">  <i class="fas fa-th-list"></i></a>
+            </div>
+            
           </div>
         </div>
       </header>
