--- a/views/postmenu.ejs
+++ b/views/postmenu.ejs
@@ -30,7 +30,10 @@
               <option value="squat">Squat 1RM</option>
             </select>
             
-
+            <div class="mb-3">
+            <labal for="weight" class="form-label">Weight</labal>
+            <input type="number" id="weight" name="weight" required>
+            </div>
             <label for="caption" class="form-label">Caption</label>
             <textarea class="form-control" id="caption" name="caption" required></textarea>
           </div>
