--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -64,7 +64,8 @@
                     </div>
                   </div>
                   <div class="d-flex flex-column">
-                    <p ><%= mergedArray[i].category %></p>
+                    <% let bodyWeight = mergedArray[i].bodyweight == 0 ? "n/a" : mergedArray[i].bodyweight + "KG" %>
+                    <p ><%= `${mergedArray[i].category}  ${mergedArray[i].weight}KG @ ${bodyWeight} bodyweight` %></p>
                   </div>
                 <%}%>
                 <a href="/post/<%= mergedArray[i]._id%>" class="post">
