--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -36,8 +36,8 @@
     <div class="col-0">
 
       <div class="col-12 d-flex">
-        <button id="posts-btn" class="btn btn-primary rounded-0 border-0 active" ><i class="fas fa-table"></i></button>
-        <button id="table-btn" class="btn btn-primary rounded-0 border-0"><i class="fas fa-trophy"></i></button>
+        <button id="posts-btn" class="btn btn-primary rounded-0 border-0 posts-btn active" ><i class="fas fa-table"></i></button>
+        <button id="table-btn" class="btn btn-primary rounded-0 border-0 table-btn"><i class="fas fa-trophy"></i></button>
       </div>
 
 
