--- a/public/css/style.css
+++ b/public/css/style.css
@@ -172,7 +172,7 @@ td > a {
     background-color: #ffffff!important;
   }
   .active {
-    background-color: #dadada!important; /* Change to the desired color */
+    background-color: #f1f0f0!important;
   }
 .container{
     padding: 0px;
