--- a/views/postmenu.ejs
+++ b/views/postmenu.ejs
@@ -31,7 +31,7 @@
             </select>
             
             <div class="mb-3">
-            <labal for="weight" class="form-label">Weight</labal>
+            <labal for="weight" class="form-label">Weight in kg</labal>
             <input type="number" id="weight" name="weight" required>
             </div>
             <label for="caption" class="form-label">Caption</label>
