--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -12,7 +12,7 @@
                         <div class="alert alert-info"><%= el.msg %></div>
                     <% }) %>    
                 <% } %>
-                <form action="/signup" method="POST">
+                <form action="/signup" enctype="multipart/form-data" method="POST">
                     <div class="mb-3">
                         <label for="userName" class="form-label">User Name</label>
                         <input type="text" class="form-control" id="userName" name="userName" v-model:value="username" pattern="[A-Za-z0-9]+" onkeydown="if(['Space'].includes(arguments[0].code)){return false;}" style="text-transform: lowercase;">
@@ -30,6 +30,10 @@
                         <label for="confirmPassword" class="form-label">Confirm Password</label>
                         <input type="password" class="form-control" id="confirmPassword" name="confirmPassword">
                       </div>
+                      <div class="mb-3">
+                        <label for="profilePic" class="form-label">Profile Pic</label>
+                        <input type="file" class="form-control" id="profilePic" name="file" accept="image/*">
+                    </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                   </form>
             </section>
